--- a/index.html
+++ b/index.html
@@ -4,6 +4,50 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta
+      name="description"
+      content="Web site created using Html-Css-Javascript"
+    />
+    <meta
+      name="description"
+      content="Web Developer Portfolio Template that show your work & skills"
+    />
+    <meta
+      name="keywords"
+      content="BestPortfolio ,HTML, CSS, JavaScript, Portfolio, FreeWebPortfolio"
+    />
+    <meta name="author" content="Ahmed Raza" />
+    <meta name="”robots”" content="”index," follow” />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://ahmed-raza-portfolio.mohsinbhai.site/"
+    />
+    <meta property="og:title" content="Ahmed Raza || Portfolio" />
+    <meta
+      property="og:description"
+      content="Web Developer Portfolio Template that helps you showcase your work and skills"
+    />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://ahmed-raza-portfolio.mohsinbhai.site/"
+    />
+    <meta property="twitter:title" content="Ahmed Raza || Personal Portfolio" />
+    <meta
+      property="twitter:description"
+      content="Web Developer Portfolio Template that helps you showcase your work and skills"
+    />
+    <meta
+      name="google-site-verification"
+      content="zBnH4EQvsFNmik_6jMqhtDLlFN1Rf0UfnrlRuJasGgs"
+    />
+
     <title>Ahmed Raza || Personal Portfolio</title>
 
     <!--
@@ -1334,7 +1378,7 @@
               <div
                 id="my_captcha_form"
                 class="g-recaptcha"
-                data-sitekey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"
+                data-sitekey="6LeStP0hAAAAAFruV799QxCpi0-uvtA34bFKe0Nv"
                 data-callback="verifyCaptcha"
               ></div>
               <div id="g-recaptcha-error"></div>
